--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon --exec tsnd --respawn --clear index.ts\" \"nodemon --exec tsnd --respawn --clear indexws.ts\""
+    "start": "pm2 start ecosystem.config.js --env development",
+    "start:prod": "pm2 start ecosystem.config.js --env production"
   },
   "keywords": [],
   "author": "",
